--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </button>
         </div>
         <pre id="bibtex-code"><code>@inproceedings{Zeng:2025:gswt,
-  author = {Zeng, Yunfan and Sander, Pedro V., and Ma, Li},
+  author = {Zeng, Yunfan and Ma, Li and Sander, Pedro V.},
   title = {GSWT: Gaussian Splatting Wang Tiles},
   year = {2025},
   publisher = {Association for Computing Machinery},
