--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="coi-serviceworker.js"></script>
-    <title>GSWT</title>
+    <title>GSWT Demo</title>
+    <link rel="icon" type="image/png" href="../static/images/icon.png">
     <style>
       * {
         padding: 0;
