Added paper link.

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
                 <div class="publication-links">
                   <!-- TODO: Update with your arXiv paper ID -->
                   <span class="link-block">
-                    <a href="static/pdfs/paper.pdf" target="_blank"
+                    <a href="https://hkustconnect-my.sharepoint.com/:f:/g/personal/yzengbm_connect_ust_hk/IgCII7VEx54pQKjdaEg8wjAqAWgPHe90UtL-ng28ZfbPPhk?e=sqyAEJ" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
                       </span>
-                      <span>Paper (TBD)</span>
+                      <span>Paper</span>
                     </a>
                   </span>
 
                   <!-- TODO: Add your supplementary material PDF or remove this section -->
-                  <span class="link-block">
+                  <!-- <span class="link-block">
                     <a href="static/pdfs/supp.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
@@ -130,7 +130,7 @@
                       </span>
                       <span>Supplementary (TBD)</span>
                     </a>
-                  </span>
+                  </span> -->
 
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
@@ -162,7 +162,6 @@
                       <span>Demo</span>
                     </a>
                   </span>
-                  <br>
                   <br>
                   <br>
                   <br>
